// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderByBtn /> tests Snapshots Should render 1`] = `
<DocumentFragment>
  <button
    class="order-by-btn"
  >
    Order By 
  </button>
</DocumentFragment>
`;

exports[`<OrderByBtn /> tests Snapshots Should render with current ascending order provided 1`] = `
<DocumentFragment>
  <button
    class="order-by-btn"
  >
    Order By ▲
  </button>
</DocumentFragment>
`;

exports[`<OrderByBtn /> tests Snapshots Should render with current descending order provided 1`] = `
<DocumentFragment>
  <button
    class="order-by-btn"
  >
    Order By ▼
  </button>
</DocumentFragment>
`;
